<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/toggle_tab_switcher_menu_item"
    android:title="@string/toggle_tab_switcher_menu_item"
    app:actionLayout="@layout/tab_dots_action"
    app:showAsAction="always"/>

  <item
    android:id="@+id/menu_item_new_session"
    android:title="@string/new_session"
    app:showAsAction="never"/>

  <item
    android:id="@+id/menu_item_lock_now"
    android:title="@string/session_lock_now"
    app:showAsAction="never"/>

  <item
    android:id="@+id/menu_item_close_session"
    android:title="@string/close_current_tab"
    app:showAsAction="never"/>

  <item
    android:title="@string/new_session_more"
    app:showAsAction="never">
    <menu>
      <item
        android:id="@+id/menu_item_new_session_with_profile"
        android:title="@string/new_session_with_profile"
        app:showAsAction="never"/>

      <item
        android:id="@+id/menu_item_new_system_session"
        android:title="@string/new_system_session"
        app:showAsAction="never"/>

      <item
        android:id="@+id/menu_item_new_x_session"
        android:title="@string/new_x_session"
        android:visible="false"
        app:showAsAction="never"/>
    </menu>
  </item>

  <item
    android:title="@string/x11_menu"
    app:showAsAction="never">
    <menu>
      <item
        android:id="@+id/menu_item_x11_start"
        android:title="@string/x11_start"
        app:showAsAction="never"/>
      <item
        android:id="@+id/menu_item_x11_stop"
        android:title="@string/x11_stop"
        app:showAsAction="never"/>
      <item
        android:id="@+id/menu_item_x11_install_env"
        android:title="@string/x11_install_env"
        app:showAsAction="never"/>
    </menu>
  </item>

  <item
    android:id="@+id/menu_item_package_settings"
    android:title="@string/package_settings"
    app:showAsAction="never"/>

  <item
    android:id="@+id/menu_item_settings"
    android:title="@string/settings"
    app:showAsAction="never"/>

</menu>