<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:orientation="vertical">

  <TextView
    android:id="@+id/setup_title_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    android:text="@string/setup_info"
    android:textColor="@color/colorAccent"
    android:textSize="30sp"/>

  <TextView
    android:id="@+id/setup_choose_distro_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/setup_title_text"
    android:text="@string/setup_choose_distro"/>

  <Button
    android:id="@+id/setup_install"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="@string/setup_install"/>

  <TextView
    android:id="@+id/setup_distro_hint_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/setup_install"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:textSize="12sp"
    android:text="@string/setup_distro_hint"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/setup_choose_distro_text"
    android:layout_above="@id/setup_distro_hint_text"
    android:layout_marginTop="12dp">

    <RadioGroup
      android:id="@+id/setup_distro_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"/>

  </ScrollView>

</RelativeLayout>
